# project-9-photo-share

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  prestart.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_09_28_1229-7a9d522f85b8_add_photos_table.py  2025_09_28_1926-488a202c88f4_add_users_table.py  2025_09_28_1927-6c00a68f7817_add_users_table.py  2025_09_28_2018-6bc9cbcc608e_add_users_table.py  2025_09_28_2137-3a537f3e05eb_add_users_table.py  2025_09_29_2037-c40c9bf799af_create_photos_table.py  2025_09_30_1059-37973af9fab2_add_users_table.py  2025_09_30_1248-993811079c31_add_owner_id_column.py  2025_10_01_1308-b8a63435f01b_add_tags_table_and_m2m_rel.py  2025_10_01_1928-4d5eb874d96a_add_comments_table.py  2025_10_02_0712-cf338982428b_add_comments_table.py  2025_10_04_0949-588950002226_add_uuid_to_users_table.py  2025_10_05_1803-d18cb987294a_add_tags_table_and_m2m_rel.py  2025_10_05_1908-2a1d3e8ea6c1_add_owner_id_column.py  2025_10_05_1948-7a6e664f0503_add_comments_table.py  2025_10_07_1239-699cc73d87e0_add_photo_transformed_table.py
src/: __init__.py  bootstrap.py  cloudinary.py  config.py  constants.py  create_app.py  create_db.py  database.py  dependencies.py  main.py  schemas.py
src/core/: __init__.py  cloudinary.py  cloudinary_config.py  config.py  database.py  pwd_context.py
src/models/: photo.py  phototransform.py  tag.py  users.py
src/repository/: __init__.py  comments.py  photos.py  tags.py  user.py  users.py
src/routes/: __init__.py  auth.py  comments.py  (+2 more)
(+47 files in other folders)
